fix(scss): adjust toolbar margin to prevent overlap of inside elements with code block

--- a/assets/scss/_prism.scss
+++ b/assets/scss/_prism.scss
@@ -322,6 +322,7 @@ div.code-toolbar > .toolbar {
 	right: .2em;
 	transition: opacity 0.3s ease-in-out;
 	opacity: 0;
+  margin: 5px 10px;
 }
 
 div.code-toolbar:hover > .toolbar {
